--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
         <!--  lookup parent from repository  -->
     </parent>
     <groupId>org.example</groupId>
-    <artifactId>AbrigoSmart</artifactId>
+    <artifactId>GSabg</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>AbrigoSmart</name>
-    <description>AbrigoSmart</description>
+    <name>GSabg</name>
+    <description>GSabg</description>
     <url/>
     <licenses>
         <license/>
@@ -83,22 +83,22 @@
             <scope>provided</scope>
         </dependency>
         <!--  BANCO DE DADOS  -->
-        <!--         <dependency> -->
-        <!--             <groupId>com.oracle.database.jdbc</groupId> -->
-        <!--             <artifactId>ojdbc11</artifactId> -->
-        <!--             <version>23.5.0.24.07</version> -->
-        <!--         </dependency> -->
+                 <dependency>
+                     <groupId>com.oracle.database.jdbc</groupId>
+                     <artifactId>ojdbc11</artifactId>
+                     <version>23.5.0.24.07</version>
+                 </dependency>
         <!--         &lt;!&ndash; https://mvnrepository.com/artifact/com.mysql/mysql-connector-j &ndash;&gt; -->
         <!--         <dependency> -->
         <!--             <groupId>com.mysql</groupId> -->
         <!--             <artifactId>mysql-connector-j</artifactId> -->
         <!--             <version>9.2.0</version> -->
         <!--         </dependency> -->
-        <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>42.7.3</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.postgresql</groupId>-->
+<!--            <artifactId>postgresql</artifactId>-->
+<!--            <version>42.7.3</version>-->
+<!--        </dependency>-->
         <!--  DOCUMENTAÇÃO DA API  -->
         <!--  https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui  -->
         <dependency>
