--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.application.name=AbrigoSmart
+spring.application.name=GSabg
 
 #Banco de Dados da Orcle FIAP
-#spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521/orcl
-#spring.datasource.username=rm554556
-#spring.datasource.password=181085
-#spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521/orcl
+spring.datasource.username=rm554556
+spring.datasource.password=181085
+spring.jpa.hibernate.ddl-auto=create
 
 
 # Para uso Devops
@@ -15,18 +15,18 @@ spring.application.name=AbrigoSmart
 
 #spring.jpa.show-sql=true
 #
-#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 
 
 # Conexão com banco PostgreSQL
-spring.datasource.url=jdbc:postgresql://dpg-abc1234p123456.postgres.render.com:5432/mydb
-spring.datasource.username=admin
-spring.datasource.password=minhasenha123
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-# Configurações JPA / Hibernate
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.datasource.url=jdbc:postgresql://dpg-abc1234p123456.postgres.render.com:5432/mydb
+#spring.datasource.username=admin
+#spring.datasource.password=minhasenha123
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#
+## Configurações JPA / Hibernate
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
 
