--- a/pom.xml
+++ b/pom.xml
@@ -60,10 +60,16 @@
         </dependency>
 
         <!-- Banco de Dados Oracle -->
+<!--        <dependency>-->
+<!--            <groupId>com.oracle.database.jdbc</groupId>-->
+<!--            <artifactId>ojdbc11</artifactId>-->
+<!--            <version>23.5.0.24.07</version>-->
+<!--        </dependency>-->
+
         <dependency>
-            <groupId>com.oracle.database.jdbc</groupId>
-            <artifactId>ojdbc11</artifactId>
-            <version>23.5.0.24.07</version>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
         </dependency>
 
         <!-- Documentação Swagger/OpenAPI -->
