--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,26 @@
 spring.application.name=GSabg
-#spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521/orcl
-#spring.datasource.username=rm554635
-#spring.datasource.password=050996
-#spring.jpa.hibernate.ddl-auto=create
-#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
-
-
-spr
-
-# Configura??o para mostrar o SQL no console
-spring.jpa.show-sql=true
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
-
-# Configura??o do cliente web do banco H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.jpa.properties.hibernate.format_sql=true
-
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521/orcl
+spring.datasource.username=rm554635
+spring.datasource.password=050996
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.show_sql=true
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+
+
+
+
+## Configura??o para mostrar o SQL no console
+#spring.jpa.show-sql=true
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.username=sa
+#spring.datasource.password=
+#
+## Configura??o do cliente web do banco H2
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#spring.jpa.properties.hibernate.format_sql=true
+#
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.properties.hibernate.show_sql=true
